<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="join_now">Join Now</string>
    <string name="have_an_account">Already have an account</string>
    <string name="username_txt">Username</string>
    <string name="email_txt">E-mail</string>
    <string name="password_txt">Password</string>
    <string name="remember_me_txt">Remember me</string>
    <string name="login_txt">Login</string>
    <string name="sign_up_txt">Sign up</string>
    <string name="forgot_pass_txt">Forgot my password</string>
    <string name="im_admin_txt">Im an admin?</string>
    <string name="fill_all_feilds">please fill all</string>
    <string name="creating_your_acc">Creating account</string>
    <string name="wait_message">Please wait</string>
    <string name="phone_txt">Phone number</string>
    <string name="phone_is_exists">This phone number already exists</string>
    <string name="email_created">your email has been created successfully</string>
    <string name="check_internet">Please check your internet connection and try again</string>
    <string name="unknown_error">Unexpected error</string>
    <string name="login_loading">Chacking account</string>
    <string name="user_not_found">wronge phone or password</string>
    <string name="email_exist">This email has been created</string>
</resources>