<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/welcome"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/applogo"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="64dp"/>

    <!--editText Layout-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_iv"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/design_input"
            android:padding="12dp"
            android:textColor="@color/white"
            android:hint="@string/email_txt"
            android:textAllCaps="false"
            android:textColorHint="@color/white"
            android:layout_marginTop="24dp"/>
        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/design_input"
            android:padding="12dp"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:hint="@string/password_txt"
            android:textAllCaps="false"
            android:textColorHint="@color/white"
            android:layout_marginTop="24dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <com.rey.material.widget.CheckBox
                android:id="@+id/remember_me_chbx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Material.Drawable.CheckBox"
                app:cbd_strokeColor="@color/colorPrimaryDark"
                android:text="@string/remember_me_txt"
                android:textColor="@color/white"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/forgot_pass_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:text="@string/forgot_pass_txt"
                android:layout_centerVertical="true"
                android:gravity="center_vertical" />


        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/design_btn_bg"
            android:text="@string/login_txt"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/admin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="end"
            android:text="@string/im_admin_txt"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="8pt"
            android:padding="4dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>